c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/extra_credit/bitwise_shift_double.c
int main(void) {
    /* It's illegal to apply the << or >> operator to doubles */
    double d = 5.0 << 3;
    return 0;
}